<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/kat_Usersettings">

        <EditTextPreference
            app:key="signature"
            app:title="@string/DefaultUsername"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="User Color"
            android:title="@string/DefaultColor"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/kat_Serversettings">
        <EditTextPreference
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/DefaultServer"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/DefaultServerPort"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>